--- a/1rqwrq.html
+++ b/1rqwrq.html
@@ -10,7 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="Description" content="Link akan tersedia dalam 5 detik">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta http-equiv="refresh" content="5; url=https://qeluarin.com/">
+	<meta http-equiv="refresh" content="5; url=https://www.file-upload.com/thl343jfh0t4">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
 	<!-- Bootstrap -->
