--- a/mantap.html
+++ b/mantap.html
@@ -18,7 +18,7 @@
 <span class="loading">Memuat konten...</span></div>
 <script>
 var toc_config = {
-    url: 'http://www.qeluarin.com/',
+    url: 'https://www.qeluarin.com/',
     containerId: 'table-of-content',
     showNew: 15,
     newText: ' <strong style="font-weight:normal;font-style:normal;color:#fff;font-size:11px;background:#5c5a78;padding:1px 6px 3px 6px;line-height:normal;float:right;border-radius:3px;">baru</strong>',
